tests/e2e/semantics/assignment_array_index_invalid.error
Error: syntax error in story at line 2, column 1

2|    a["foo"] = 100
      ^^^^^^^

E0104: `List[int]` can't be indexed with `foo` of type `string`
