tests/e2e/semantics/assignment_array_index_invalid.story
a = [20, 12, 23]
a["foo"] = 100
